# Spekforge

./: .gitignore  pyproject.toml
docs/report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
docs/report/chapters/: fase0.tex  fase1.tex  introduction.tex
src/spekforge/ingest/: base.py  chunking.py  markitdown_ingestor.py  router.py  structured_ingestor.py
src/spekforge/models/: chunk.py  endpoint.py  param.py  schema.py
tests/fixtures/petstore/input_docs/: petstore.md
tests/unit/: test_ingest.py  test_models.py
