[project]
name = "spekforge"
version = "0.1.0"
description = "Reconstruccion de especificaciones OpenAPI desde documentacion heterogenea, con verificacion en loop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "markitdown>=0.0.1a3",
    "openapi-spec-validator>=0.7",
    "schemathesis>=3.30",
    "httpx>=0.27",
    "ollama>=0.3",
    "instructor>=1.4",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5",
]

[dependency-groups]
dev= [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]